fixed title,margin, gap

--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -21,12 +21,6 @@
 }
 
 .about-title {
-  /* font-weight: 400;
-  font-size: 40px;
-  line-height: 1.2;
-  letter-spacing: 0.01em;
-  text-align: center;
-  color: #0d0b0a; */
   margin-bottom: 20px;
 }
 .about-text {
@@ -53,7 +47,6 @@
   letter-spacing: 0.01em;
   text-align: center;
   color: #0d0b0a;
-  margin-bottom: 20px;
 }
 .about-list-item-text {
   font-weight: 400;
@@ -78,13 +71,14 @@
 /* tablet */
 
 @media (min-width: 768px) {
-  /* .container {
-    max-width: 768px;
-  } */
   .about {
     background-color: #f2fafa;
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+
+  .about-title {
+    margin-bottom: 24px;
   }
 
   .about-wrap {
@@ -94,16 +88,12 @@
     margin-top: 40px;
   }
 
-  .about-title {
-    margin-bottom: 24px;
-  }
-
   .about-text {
     margin-bottom: 40px;
   }
 
   .about-list {
-    gap: 24px 24px;
+    gap: 45px 24px;
   }
 
   .about-list-item {
